--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/app.css
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/app.css
@@ -1,3 +1,8 @@
 body {
     background-color: #f5d9d5;
+    font-family: "Nunito", sans-serif;
+}
+
+#mainNavbar .navbar-brand {
+    color: #EA1C2C
 }
